--- a/nixos.org
+++ b/nixos.org
@@ -2,19 +2,14 @@
 
 * todo
 ** misc
-*** split into multiple flake.nix repos
-*** fix corfu mode in terminal
-*** nixpkgs search script
+*** [ ] split into multiple flake.nix repos
+*** [ ] nixpkgs search script
 #+begin_src bash
 nix search nixpkgs chatgpt | sed 's/legacyPackages.[^.]*.//' | grep -v "evaluating '" | grep -Ee '.+' | sed 's/\* //' | less
 #+end_src
-*** config for hyprpaper, hypridle, hyprlock
+*** [ ] automate reload of .zshrc after changes
 *** README.org for github
-*** enable copilot in magit commit buffers
-*** automate reload of .zshrc after changes
 ** ags
-*** use forWindows for bars
-*** finish adding statusbar widgets
 ** rofi
 *** show modes list as tab bar
 ** emacs
